--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "react-scripts": "1.0.14",
     "react-test-renderer": "15.6.2",
     "react-toolbox-themr": "^1.0.2",
-    "redux-mock-store": "^1.2.3"
+    "redux-mock-store": "^1.2.3",
+    "string-replace-loader": "^2.1.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
