--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,8 @@
 DEV_REACT_APP_API_URL=http://localhost:8080
-PROD_REACT_APP_API_URL=https://oraculum-dev.tk
+PROD_REACT_APP_API_URL=http://oraculum-dev.tk
 
 GOOGLE_KEY=development
+## GOOGLE_KEY=production
 
 DEV_GOOGLE_EXTENSION_ID=lcpmicjjmgdclbmaeeeffjkiffpgddig
 ## DEV_GOOGLE_EXTENSION_ID=phjlfpkogkimdblajdegemgooeabmocm
