--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "babel-polyfill": "^6.23.0",
     "classnames": "2.2.5",
     "domain-task": "^3.0.0",
+    "downshift": "^2.0.10",
     "font-awesome": "4.7.0",
+    "keycode": "^2.2.0",
     "material-ui": "1.0.0-beta.18",
     "material-ui-apollo": "1.7.0-alpha.33",
     "material-ui-apollo-icons": "1.0.0-alpha.1",
