--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "babel-polyfill": "^6.23.0",
     "classnames": "2.2.5",
     "domain-task": "^3.0.0",
-    "downshift": "^2.0.10",
     "font-awesome": "4.7.0",
-    "keycode": "^2.2.0",
     "material-ui": "1.0.0-beta.18",
     "material-ui-apollo": "1.7.0-alpha.33",
     "material-ui-apollo-icons": "1.0.0-alpha.1",
@@ -28,6 +26,7 @@
     "react-intl": "^2.3.0",
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.1",
+    "react-select": "^1.2.1",
     "react-slick": "0.15.4",
     "react-table": "6.5.0",
     "react-toolbox": "^2.0.0-beta.12",
